@@ -5,10 +5,13 @@ import cn.hutool.core.text.CharSequenceUtil;
 import lombok.experimental.UtilityClass;
 
 import java.io.File;
+import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class BannedPromptUtils {
@@ -16,15 +19,17 @@ public class BannedPromptUtils {
 	private final List<String> BANNED_WORDS;
 
 	static {
-		List<String> lines;
-		File file = new File(BANNED_WORDS_FILE_PATH);
-		if (file.exists()) {
-			lines = FileUtil.readLines(file, StandardCharsets.UTF_8);
-		} else {
-			var resource = BannedPromptUtils.class.getResource("/banned-words.txt");
-			lines = FileUtil.readLines(resource, StandardCharsets.UTF_8);
-		}
-		BANNED_WORDS = lines.stream().filter(CharSequenceUtil::isNotBlank).toList();
+		List<String> lines = Optional.of(new File(BANNED_WORDS_FILE_PATH))
+				.filter(File::exists)
+				.map(file -> FileUtil.readLines(file, StandardCharsets.UTF_8))
+				.orElseGet(() -> {
+					URL resource = BannedPromptUtils.class.getResource("/banned-words.txt");
+					return FileUtil.readLines(resource, StandardCharsets.UTF_8);
+				});
+
+		BANNED_WORDS = lines.stream()
+				.filter(CharSequenceUtil::isNotBlank)
+				.collect(Collectors.toList());
 	}
 
 	public static boolean isBanned(String promptEn) {
